# dwm-statusbar

./: .gitignore  Cargo.toml
src/: main.rs
src/lib/: common.rs  config.rs  errors.rs  lib.rs  reopen_lock.rs  scheduler.rs  util.rs
tests/: check_test.rs  config_test.rs
