[package]
name = "dwm-statusbar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="utillib"
path="src/lib/lib.rs"

[dependencies]
ctrlc="3.2.5"
named-lock="0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror="1.0"
